--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,20 @@ body {
     color: var(--black-color);
 }
 
+ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+
+    outline: 2px dashed red;
+}
+
 .nav-link {
     font-family: "Montserrat", sans-serif;
     font-size: 14px;
@@ -99,4 +113,15 @@ body {
     text-transform: uppercase;
     color: white;
     background-color: var(--greenlight-color);
+}
+
+.footer-form-input{
+    border: 1px solid var(--light-wight-color);
+    padding: 12px 10px;
+    width: 230px;
+}
+
+.footer-form-btn{
+    border: none;
+    padding: 12px 38px;
 }
